--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,14 @@ Authors@R:
            comment = c(ORCID = "0000-0001-9445-8466"))
 Description: Stores code which I am using accross various projects.
 	For each code change, tests are executed.
-License: MIT
+License: BSD_3_clause + file LICENSE
 URL: https://github.com/rikhuijzer/codex
 BugReports: https://github.com/rikhuijzer/codex/issues
 Imports:
+	dplyr (>= 0.8.3),
 	knitr (>= 1.27),
-	memoise (>= 1.1.0)
+	memoise (>= 1.1.0),
+	tibble (>= 2.1.3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
