--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ BugReports: https://github.com/rikhuijzer/codex/issues
 Imports:
 	dplyr (>= 0.8.3),
 	knitr (>= 1.27),
+	magrittr (>= 1.5),
 	memoise (>= 1.1.0),
 	tibble (>= 2.1.3)
 Encoding: UTF-8
